--- a/index.html
+++ b/index.html
@@ -4,32 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MAKINO Hiroya のサイト</title>
+  <title>JANG taewon のサイト</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <img src="makino.png" alt="太郎のアイコン" width="128" height="128">
-    <h1>まきの ひろや</h1>
-    <p>プサン外国語大学 日本語融合学部で教えています。</p>
+    <h1>JANG Taewon</h1>
+    <p>プサン外国語大学 spain</p>
   </header>
 
   <main>
-    <h2>好きなもの</h2>
+    <h2>Favorite things</h2>
     <section>
       <img src="image-1.png" alt="これが好き" width="400" height="240">
-      <h3>これが好き</h3>
-      <p>これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。</p>
+      <h3>Favorite things</h3>
+      <p>Favorite things</p>
     </section>
     <section>
       <img src="image-2.png" alt="これが好き" width="400" height="240">
-      <h3>これが好き</h3>
-      <p>これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。</p>
+      <h3>Favorite things</h3>
+      <p>Favorite things</p>
     </section>
     <section>
       <img src="image-3.png" alt="これが好き" width="400" height="240">
-      <h3>これが好き</h3>
-      <p>これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。これが好きです。</p>
+      <h3>Favorite things</h3>
+      <p>Favorite things</p>
     </section>
   </main>
 
